Panel bar: Fix control visible states when using chat,map order

--- a/src/css/panelbar.css
+++ b/src/css/panelbar.css
@@ -211,7 +211,12 @@
   display: none;
 }
 
-#panel-bar-splitter-panel2:hover #panel-bar-chat-toolbar {
+[data-order="1"] #panel-bar-splitter-panel1:hover #panel-bar-chat-toolbar {
+  left: 26px;
+}
+
+[data-order="0"] #panel-bar-splitter-panel2:hover #panel-bar-chat-toolbar,
+[data-order="1"] #panel-bar-splitter-panel1:hover #panel-bar-chat-toolbar {
   display: block;
 }
 
@@ -247,7 +252,7 @@
   white-space: nowrap;
 }
 
-#panel-bar:hover #mini-map-title {
+#panel-bar[data-order="0"]:hover #mini-map-title {
   padding-left: 28px;
 }
 
@@ -266,8 +271,10 @@
   opacity: 1;
 }
 
-#panel-bar:hover #mini-map-zoom,
-#panel-bar:hover #mini-map-display {
+[data-order="0"] .splitter-panel-1:hover #mini-map-zoom,
+[data-order="0"] .splitter-panel-1:hover #mini-map-display,
+[data-order="1"] .splitter-panel-2:hover #mini-map-zoom,
+[data-order="1"] .splitter-panel-2:hover #mini-map-display {
   display: block;
 }
 
